--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
             <li><a href="#">Accessories</a></li>
           </ul>
         </div>
-        <div class="services">
+        <div class="services"  style="position:relative;top: -10px;">
           <h6>Services</h6>
           <ul>
             <li><a href="#">Apple Music</a></li>
@@ -696,7 +696,7 @@
             <li><a href="#">App store</a></li>
           </ul>
         </div>
-        <div class="account">
+        <div class="account"  style="position:relative;top: -10px;">
           <h6>Account</h6>
           <ul>
             <li><a href="#">Manage Your Apple ID</a></li>
@@ -704,7 +704,7 @@
             <li><a href="#">iCloud Account</a></li>
           </ul>
         </div>
-        <div class="applestore">
+        <div class="applestore" style="position:relative;top: -20px;">
           <h6>Apple Store</h6>
           <ul>
             <li><a href="#">Shop Online</a></li>
@@ -715,13 +715,13 @@
             <li><a href="#">Shopping Help</a></li>
           </ul>
         </div>
-        <div class="business">
+        <div class="business" style="position:relative;top: -27px;">
           <h6>For Business</h6>
           <ul>
             <li><a href="#">Apple and Business</a></li>
           </ul>
         </div>
-        <div class="foreducation">
+        <div class="foreducation" style="position:relative;top: -40px;">
           <h6>For Education</h6>
           <ul>
             <li><a href="#">Apple and education</a></li>
@@ -729,14 +729,14 @@
             <li><a href="#">Shop for Business</a></li>
           </ul>
         </div>
-        <div class="forhealthcare">
+        <div class="forhealthcare" style="position:relative;top: -45px;">
           <h6>For Healthcare</h6>
           <ul>
             <li><a href="#">Apple in Healthcare</a></li>
             <li><a href="#">Health On Applewatch</a></li>
           </ul>
         </div>
-        <div class="applevalues">
+        <div class="applevalues"  style="position:relative;top: -33px;">
           <h6>Apple Values</h6>
           <ul>
             <li><a href="#">Accessibility</a></li>
@@ -745,7 +745,7 @@
             <li><a href="#">Supplier Responsibility</a></li>
           </ul>
         </div>
-        <div class="about">
+        <div class="about"  style="position:relative;top: -20px;">
           <h6>About Apple</h6>
           <ul>
             <li><a href="#">Newsroom</a></li>
